cmake_minimum_required(VERSION 3.19)
project(des_demo)

set(CMAKE_CXX_STANDARD 11)

# 导入第三方库
include(FetchContent)

FetchContent_Declare(json
        GIT_REPOSITORY https://github.com/ArthurSonzogni/nlohmann_json_cmake_fetchcontent
        GIT_TAG v3.9.1)

FetchContent_GetProperties(json)
if (NOT json_POPULATED)
    FetchContent_Populate(json)
    add_subdirectory(${json_SOURCE_DIR} ${json_BINARY_DIR} EXCLUDE_FROM_ALL)
endif ()

add_executable(des_demo main.cpp)

target_link_libraries(des_demo PRIVATE nlohmann_json::nlohmann_json)
